# zyp-skills

./: .gitignore  .prettierignore  README.md  cerberus.toml  justfile  package.json  pyproject.toml  pyrefly.toml  release-targets.toml  ruff.toml  vitest.config.ts
.github/: CODEOWNERS  copilot-instructions.md  settings.yml
.github/workflows/: ci.yml
docs/wiki/: pyts-naming-conventions-short.md  pyts-naming-conventions.md
plan/: stormitem.md
plan/ideas/: new-skill-likeC4.md
plan/skill-suggestions/plan-storm/: sy-different-structure.md
scripts/: pusher.py  release.py  skillman.py
skills/h2md/: SKILL.md  h2md.py  package.json
skills/mermaid/: SKILL.md
skills/mermaid/references/: README.md
skills/mermaid/references/syntax/: architecture.md  classDiagram.md  cynefin.md  entityRelationshipDiagram.md  eventmodeling.md  gantt.md  pie.md  radar.md  railroad.md  sankey.md  sequenceDiagram.md  swimlanes.md  treeView.md  venn.md  wardley.md  xyChart.md
skills/peek/: SKILL.md  package.json  peek.py
skills/stormitem/: SKILL.md  package.json  registry.toml  stormitem.py
skills/suggest/: SKILL.md  package.json  suggest.py
tests/: test_release.py  test_skills_valid.py
tests/skills/: conftest.py  test_cli.py
tests/skills/h2md/: conftest.py  test_artifact_detection.py  test_code_blocks.py  test_extraction.py  test_language_sniffing.py  test_metadata_extraction.py  test_normalization.py  test_pipeline.py  test_tabs.py
tests/skills/peek/: conftest.py  test_peek.py
tests/skills/stormitem/: conftest.py  test_stormitem.py
tests/skills/suggest/: conftest.py  test_suggest.py
tests/stories/: 1_release-bump.md  2_stormitem-post.md  3_h2md-assets.md  conftest.py  test_1_release-bump.py  test_2_stormitem-post.py  test_3_h2md-assets.py
