[project]
name = "zyp-skills"
requires-python = ">=3.14"
version = "0.1.0"
dependencies = [
    "typer>=0.26.8",
    "skills-ref>=0.1.1",
]

[dependency-groups]
test = [
    "pytest>=9.1.1",
    "duckdb>=1.5.4",
    "skills-ref>=0.1.1",
    "typer>=0.26.8",
    "toon-format>=0.9.0b1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "markdownify>=1.2.3",
    "pyyaml>=6.0.3",
    "pytest-cov>=7.1.0",
]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.27",
    "vulture>=2.16",
    "zyplux-cerberus==0.7.0",
]
typecheck = [
    "duckdb>=1.5.4",
    "typer>=0.26.8",
    "toon-format>=0.9.0b1",
    "pytest>=9.1.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "markdownify>=1.2.3",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260518",
    "skills-ref>=0.1.1",
    "pyrefly>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "--cov=skills --cov=scripts --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 90

[tool.vulture]
paths = ["skills", "scripts"]
# Typer invokes command/callback functions through the decorator, never by name, so
# vulture reads them as dead. Same for eager `--version` option params: typer routes
# them straight to the callback, so the function body never reads `version`.
ignore_decorators = ["@app.command", "@app.callback"]
ignore_names = ["version"]
